--- a/app/views/pages/ask.html.erb
+++ b/app/views/pages/ask.html.erb
@@ -1,10 +1,10 @@
 
-<div class="container justify-content-center text-center m-5">
+<div class="container justify-content-center m-5">
 
   <h2>Hello, I am your coach, what did you want to tell me?</h2>
 
   <form action="/answer" method="get">
-    <input type="text" class="form-control m-2 text-center" name="answer" placeholder="Whaaaaat!?" style="width: 300px">
+    <input type="text" class="form-control" name="answer" placeholder="Whaaaaat!?" style="width: 400px">
     <button type="submit" class="btn btn-primary m-2">Submit</button>
   </form>
 </div>
